convert img to webp

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ main {
 .main-img {
   height: 30rem;
   width: 40%;
-  background: url(/Light\ Blue\ Grey\ White\ Simple\ Professional\ Employment\ LinkedIn\ Profile\ Picture.png)
+  background: url(/Light-Blue-Grey-White-Simple-Professional-Employment-LinkedIn-Profile-Picture.webp)
     no-repeat;
   background-size: contain;
   background-position: right;
