--- a/style.css
+++ b/style.css
@@ -55,3 +55,16 @@ section p {
   line-height: 1.5;
   max-width: 55ch;
 }
+
+#about{
+  background-image: url(images/code.jpg) ;
+  background-repeat: no-repeat;
+  height: 40vh;
+  background-size: cover;
+  background-position: center center;
+  font-size: 40px;
+  margin-bottom: 10px;
+  margin-top: 0;
+  text-align: center;
+  color: #FFFFFF;
+}
