--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@
   --font: "Raleway", system-ui, sans-serif;
   --gap: 20px;
   --container: clamp(280px, calc(100vw - calc(var(--gap) * 2)), 1180px);
+  --shadow: 2px 2px 5px 2px var(--ink);
+}
+/* suppress FOUC */
+html {
+  animation: fade-in 1s;
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 /* General Styles */
 html,
@@ -18,7 +31,6 @@ body {
 body {
   display: grid;
   margin: auto;
-  min-height: 100vh;
   gap: var(--gap);
   max-width: var(--container);
 }
@@ -27,13 +39,20 @@ a:any-link {
   color: currentColor;
   text-decoration: none;
   border-bottom: 2px solid transparent;
-  transition: border-color ease-in-out 0.3s;
+  transition: all ease-in-out 0.3s;
 }
 a:hover,
 a:focus {
   color: var(--brand);
   border-color: currentColor;
+  font-weight: bold;
 }
+.polaroid {
+  border: 0.75rem solid var(--paper);
+  box-shadow: var(--shadow);
+  box-sizing: border-box;
+}
+
 /* Site header and navigation */
 body > header {
   background: var(--paper);
@@ -50,8 +69,77 @@ nav ul {
   gap: var(--gap);
 }
 
+h3 {
+  padding: 0;
+  margin: 0.75rem 0 0.5rem;
+}
+
 /* Text readability */
-section p {
+p {
   line-height: 1.5;
   max-width: 55ch;
+  margin: 0;
+}
+
+/* Main */
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+
+  padding: 0 var(--gap);
+}
+
+/* About Me */
+
+#personal-info {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: var(--gap);
+  align-items: center;
+
+  text-align: justify;
+
+  max-height: min-content;
+}
+
+#about img {
+  height: 40vh;
+  max-height: 450px;
+  min-height: 300px;
+  width: auto;
+}
+
+#about-text {
+  display: flex;
+  flex-direction: column; 
+  gap: var(--gap);
+}
+
+/* Projects */
+
+#projects-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: calc(var(--gap)*2);
+  row-gap: var(--gap);
+}
+
+.project {
+  max-width: 30%;
+  min-width: 350px;
+}
+
+.project img {
+  width: 100%;
+}
+
+.project-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 0.5rem;
 }
