--- a/style.css
+++ b/style.css
@@ -151,29 +151,45 @@ main {
 /* Contact */
 
 #contacts-info {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: 25vw 25vw;
+  justify-items: flex-start;
 }
 
 #contacts-info a {
   display: flex;
   align-items: center;
+  flex-direction: row;
   gap: 0.5rem;
+
+  border: none;
 }
 
 svg {
+  fill: currentColor;
+}
+
+#contacts-info svg {
+  width: 2rem;
+  height: auto;
+}
+
+#contact-mini {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  text-align: right;
+  z-index: 1;
+
+  display: flex;
+  flex-direction: column;
+}
+
+#contact-mini svg {
+
   width: 1.5rem;
-  height: 1.5rem;
 }
 
-svg image {
-  width: 100%;
-  height: 100%;
-}
-
-svg image {
-  fill: blue;
+#contact-mini a {
+  border: none;
 }
