--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ a:focus {
   box-sizing: border-box;
 }
 
+svg {
+  fill: currentColor;
+}
+
 /* Site header and navigation */
 body > header {
   background: var(--paper);
@@ -114,7 +118,7 @@ main {
 
 #about-text {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   gap: var(--gap);
 }
 
@@ -124,7 +128,7 @@ main {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  column-gap: calc(var(--gap)*2);
+  column-gap: calc(var(--gap) * 2);
   row-gap: var(--gap);
 }
 
@@ -165,20 +169,17 @@ main {
   border: none;
 }
 
-svg {
-  fill: currentColor;
-}
-
 #contacts-info svg {
   width: 2rem;
   height: auto;
 }
 
+/* Footer */
+
 #contact-mini {
   position: fixed;
   bottom: 1rem;
   right: 1rem;
-  text-align: right;
   z-index: 1;
 
   display: flex;
@@ -186,10 +187,29 @@ svg {
 }
 
 #contact-mini svg {
-
   width: 1.5rem;
 }
 
 #contact-mini a {
   border: none;
+}
+
+@media screen and (max-width: 600px){
+  #contact {
+    display: none;
+  }
+
+  footer {
+    height: 4rem;
+  }
+
+  #contact-mini {
+    width: 100%;
+    left: 0;
+    right: 0;
+
+    flex-direction: row;
+    gap: var(--gap);
+    justify-content: space-around;
+  }
 }
