--- a/style.css
+++ b/style.css
@@ -53,40 +53,72 @@ nav ul {
 /* Text readability */
 section p {
   line-height: 1.5;
-  max-width: 55ch;
 }
-
 
 #about {
- display: grid;
-  grid-template-columns: repeat(2,1fr);
- grid-template-rows: repeat(4,auto);
- gap: var(--gap);
-}
-.about-imgs{
-  grid-column: 2/-1;
-  grid-row: 1/-1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  justify-self: right;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(5, auto);
   gap: var(--gap);
 
 }
-img{
-  height: 30vh;
+.about-imgs {
+  grid-column: 2/-1;
+  grid-row: 2/-1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--gap);
 }
-.icon{
+h2 {
+  grid-column: 1/-1;
+  grid-row: 1/2;
+}
+.shadow-img {
+  height: 30vh;
+  width: 40vh;
+  background-position: center;
+  background-size: cover;
+  box-shadow: inset 2px 2px 10px 5px rgba(0, 0, 0, 0.6);
+  border: 1px solid var(--ink);
+  border-radius: 48px;
+}
+
+.icon {
   height: 48px;
   width: 48px;
+  border: 0;
+  border-radius: 0;
+}
+.tl {
+  display: grid;
+  grid-template-areas:
+    "a b c"
+    "e e e"
+    "i j k";
+}
+.tl1 {
+  grid-area: a;
+}
+.tl2 {
+  grid-area: j;
+}
+.tl3 {
+  grid-area: c;
+}
+.bd{
+  border-left: solid 2px;
+  padding-left: 5px;
+}
+
+.tl5{
+grid-area: e;
+border: solid 1px;
 }
 
 .projects {
-  
 }
 .contact {
-  
 }
 
 footer {
