--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ nav ul {
 /* Text readability */
 section p {
   line-height: 1.5;
+  max-width: 75ch;
+}
+section {
+  margin-bottom: 50px;
 }
 
 #about {
@@ -60,7 +64,7 @@ section p {
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(5, auto);
   gap: var(--gap);
-
+  
 }
 .about-imgs {
   grid-column: 2/-1;
@@ -73,15 +77,33 @@ section p {
 h2 {
   grid-column: 1/-1;
   grid-row: 1/2;
+  justify-self: center;
 }
-.shadow-img {
+.div-img {
   height: 30vh;
   width: 40vh;
   background-position: center;
   background-size: cover;
+}
+.shadow-inside {
   box-shadow: inset 2px 2px 10px 5px rgba(0, 0, 0, 0.6);
   border: 1px solid var(--ink);
   border-radius: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hdrTag {
+  padding: 0px 10px 0px 10px;
+  border-radius: 48px;
+  border: 1px solid var(--ink);
+  box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, 0.6);
+  background-color: hsla(251, 28%, 88%, 0.59);
+}
+.shadow-inside:hover{
+  box-shadow: inset 4px 4px 12px 6px rgba(0, 0, 0, 0.8);
+  border-color: var(--hover-color);
 }
 
 .icon {
@@ -106,18 +128,67 @@ h2 {
 .tl3 {
   grid-area: c;
 }
-.bd{
+.bd {
   border-left: solid 2px;
   padding-left: 5px;
 }
 
-.tl5{
-grid-area: e;
-border: solid 1px;
+.tl5 {
+  grid-area: e;
+  border: solid 1px;
 }
 
-.projects {
+#projects {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: var(--gap);
+  grid-auto-flow: dense;
 }
+
+.archiProjects{
+  grid-row: 2/4;
+  grid-column: -3/-1;
+  
+
+}
+
+.softProjects{
+  grid-row: 4/6;
+  grid-column: 1/3;
+  text-align: end;
+}
+.p-images{
+  box-shadow: inset 2px 2px 10px 5px rgba(0, 0, 0, 0.6);
+  border: 1px solid var(--ink);
+  border-radius: 24px;
+  background-size: cover;
+  background-position: center;
+  transition: box-shadow 0.3s, border-color 0.3s;
+  
+}
+.p-images:hover{
+  box-shadow: inset 4px 4px 12px 6px rgba(0, 0, 0, 0.8);
+  border-color: var(--hover-color);
+}
+.long-image{
+  grid-column: span 2;
+}
+.tall-image{
+  grid-row: span 2;
+}
+.big-image{
+grid-column: span 2;
+grid-row: span 2;
+}
+
+
+
+
+
+
+
+
 .contact {
 }
 
