--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 /* Design tokens */
 :root {
-  --paper: hsla(251, 28%, 88%, 0.99);
+  --paper: hsla(0, 0%, 100%, 0.99);
   --ink: hsla(244, 16%, 17%, 0.95);
   --brand: hsla(0, 79%, 63%, 0.9);
   --font: "League Spartan", sans-serif;
   --gap: 20px;
   --container: clamp(280px, calc(100vw - calc(var(--gap) * 2)), 1180px);
+
+  /* --paper: hsla(251, 28%, 88%, 0.99); */
 }
 /* General Styles */
 html,
@@ -61,8 +63,7 @@ section p {
 .project-list {
   display: flex;
   flex-direction: column;
-  margin-bottom: 7rem;
-  width: 300px;
+  margin-bottom: 3rem;
 }
 
 /* Footer */
