--- a/style.css
+++ b/style.css
@@ -22,6 +22,52 @@ body {
   gap: var(--gap);
   max-width: var(--container);
 }
+
+/* grid */
+main {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  grid-template-columns: 30vw 50vw;
+  gap: 20px;
+  justify-content: center;
+  align-items: start;
+}
+
+#about {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+
+#about img {
+  width: 100%;
+}
+
+#projects {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  gap: 20px;
+}
+#projects header {
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 3;
+}
+#projects img {
+  grid-row: 2 / span1;
+  max-width: 100%;
+  display: flex;
+}
+
+#contact {
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+}
+#empty-section {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+}
+
 a,
 a:any-link {
   color: currentColor;
