--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ section p {
   max-width: 55ch;
 }
 
+h2{
+  text-align: center;
+}
 #about{
   background-image: url(images/code.jpg) ;
   background-repeat: no-repeat;
@@ -71,3 +74,55 @@ section p {
   text-align: center;
   color: #FFFFFF;
 }
+
+.social-links {
+  display: flex;
+  justify-content: center;
+}
+
+.social-links a {
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  text-decoration: none;
+  color: #000;
+  box-shadow: 0 0 20px 10px rgba(226, 220, 220, 0.05);
+  margin: 0 30px;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.5s;
+}
+
+.social-links a .fab {
+  font-size: 30px;
+  line-height: 80px;
+  position: relative;
+  z-index: 10;
+  transition: color 0.5s;
+}
+
+.social-links a::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  top: -90px;
+  left: 0;
+  background: #936b6b;
+  background: linear-gradient(-45deg, #b2b7b4, #746f8c);
+  position: absolute;
+  transition: 0.5s;
+}
+
+.social-links a:hover::after {
+  top: 0;
+}
+
+.social-links a:hover .fab {
+  color: #4e3d3d;
+}
+
+.social-links a:hover {
+  transform: translateY(-10px);
+}
+
