--- a/style.css
+++ b/style.css
@@ -64,11 +64,12 @@ h2{
 }
 #about{
   background-image: url(images/code.jpg) ;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   background-repeat: no-repeat;
-  height: 40vh;
+  height: 45vh;
   background-size: cover;
   background-position: center center;
-  font-size: 40px;
+  font-size: 30px;
   margin-bottom: 10px;
   margin-top: 0;
   text-align: center;
@@ -85,8 +86,8 @@ h2{
   height: 80px;
   text-align: center;
   text-decoration: none;
-  color: #000;
-  box-shadow: 0 0 20px 10px rgba(226, 220, 220, 0.05);
+  color: #060606;
+  box-shadow: 0 0 20px 10px rgba(126, 25, 25, 0.05);
   margin: 0 30px;
   border-radius: 50%;
   position: relative;
@@ -109,7 +110,7 @@ h2{
   top: -90px;
   left: 0;
   background: #936b6b;
-  background: linear-gradient(-45deg, #b2b7b4, #746f8c);
+  background: linear-gradient(-45deg, #a02b6d, #746f8c);
   position: absolute;
   transition: 0.5s;
 }
@@ -124,6 +125,82 @@ h2{
 
 .social-links a:hover {
   transform: translateY(-10px);
+}
+#conteneur-contact{
+  background:url(images/img.jpg) 100% no-repeat;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  background-size:cover;
+}
+
+.contact{
+  max-width:660px;
+  width:100%;
+  margin:auto;
+  text-align:center;
+}
+
+.contact h2{
+  padding-bottom:50px;
+  font-size:25px;
+  font-weight:100;
+  text-transform:uppercase;
+  color:#FFF;
+}
+.input h3{
+	margin-top:15px;
+	margin-bottom:10px;
+	color:#fff;
+	font-size:17px;
+  font-weight:100;
+  text-align:left;
+}
+.input textarea{
+	margin-bottom:15px;
+}
+input[type="email"], input[type="text"],  textarea{
+	height:25px;
+	width:100%;
+	padding:2.5px 8px;
+	background-color:rgba(0,0,0,0.4);
+	border:none;
+	border-bottom:1px solid #E3E3E3;
+	box-shadow:none;
+	box-sizing:border-box;
+	border-radius:0;
+	outline:none;
+  color:#fff;
+}
+textarea{
+	min-height:150px;
+	max-height:150px;
+	max-width:100%;
+	max-width:100%;
+}
+input[type="submit"]{
+	font-size:17px;
+	width:100%;
+	display:inline-block;
+	height:25px;
+	padding:0 30px;
+	text-align:center;
+	font-weight:100;
+	line-height:20px;
+	text-transform:uppercase;
+	text-decoration:none;
+	white-space:nowrap;
+	border-radius:0px;
+	border:0;
+	cursor:pointer;
+	box-sizing:border-box;
+	color:white;
+	background-color:rgba(0,0,0,0.5);
+	transition:0.4s;
+}
+input[type="submit"]:hover{
+	background-color:#FFF;
+	color:#000;
+	text-decoration:none;
+	transition:0.4s;
 }
 
 footer{
