--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ h2{
   background-size: cover;
   background-position: center center;
   font-size: 30px;
-  margin-bottom: 10px;
   margin-top: 0;
   text-align: center;
   color: #FFFFFF;
@@ -126,7 +125,64 @@ h2{
 .social-links a:hover {
   transform: translateY(-10px);
 }
-#conteneur-contact{
+
+.portfolio,
+.portfolio-container {
+  display: flex;
+}
+.portfolio {
+  background-color: rgb(238, 237, 237);
+  margin-top: 2.5rem;
+  padding-top: 3rem;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.portfolio-header {
+  font-size: 2rem;
+  margin-bottom: 2.5rem;
+}
+
+.portfolio-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  flex-direction: column;
+  width: 95%;
+}
+
+.card {
+  margin: 1.5rem 0;
+  max-width: 250px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 5px 0px,
+    rgba(0, 0, 0, 0.5) 0px 2px 15px 0px;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.card img {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.card h2 {
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+  font-size: 20px;
+}
+
+
+
+.text-container {
+  width: 70%;
+  margin: 0 auto;
+}
+
+ 
+#background-contact{
   background:url(images/img.jpg) 100% no-repeat;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   background-size:cover;
