--- a/style.css
+++ b/style.css
@@ -17,8 +17,12 @@ body {
   font-family: var(--font);
   padding: 2%;
 }
+
+.flex{
+  display: flex;
+}
+
 body {
-  display: grid;
   margin: auto;
   min-height: 100vh;
   gap: var(--gap);
@@ -73,6 +77,7 @@ h2{
   margin-top: 0;
   text-align: center;
   color: #FFFFFF;
+  margin-bottom: 2.5rem;
 }
 
 .social-links {
@@ -136,7 +141,7 @@ h2{
   padding-top: 3rem;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 100px;
   margin: 0 auto;
 }
 
@@ -147,11 +152,15 @@ h2{
 
 .portfolio-container {
   display: flex;
-  align-items: center;
+  flex-direction: column; 
+  width: 100%;
+  gap: 3rem;
+}
+
+.portfolio-row {
+  display: flex; 
+  align-items:center;
   justify-content: space-around;
-  text-align: center;
-  flex-direction: column;
-  width: 95%;
 }
 
 .card {
