--- a/Elmira-Zangeneh-portfolio/style - Copy.css
+++ b/Elmira-Zangeneh-portfolio/style - Copy.css
@@ -86,6 +86,7 @@ https://baymard.com/blog/line-length-readability
 section p {
   line-height: 1.5;
   max-width: 55ch;
+  
 }
 /* targeted resets 
 We're resetting elements with a class - ANY class 
@@ -95,6 +96,7 @@ you added your own styles
 h3[class] {
   margin: 0 auto 0 0;
 }
+
 ul[class],
 li[class] {
   margin: 0;
@@ -165,5 +167,6 @@ https://www.interaction-design.org/literature/article/the-power-of-white-space
   
 
 }
+/*formcontact style
 
 
