I added changes in css and html according to pull request comments.

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ section p {
   padding-bottom: 0.1rem;
   display: flex;
   flex-direction: row;
-  gap: 3rem;
+  gap: 3em;
   flex-wrap: wrap;
 }
 .module__head {
