I added some changes in css

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 html,
 body {
   background-image: url("https://wallpapercave.com/wp/wp7453795.jpg");
-  color: white;
+  color: rgb(240, 234, 234);
   font-family: var(--font);
 }
 
