--- a/style.css
+++ b/style.css
@@ -194,8 +194,47 @@ main {
   border: none;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
+  body {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  body > header {
+    width: 98%;
+    margin: 0 auto;
+  }
+
+  main {
+    padding: 0 0.5rem;
+  }
+
+  h1 {
+    display: block;
+    width: 40%;
+    margin: 0.5rem 0;
+  }
+
+  nav {
+    justify-content: space-evenly;
+    width: 60%;
+  }
+
+  nav ul {
+    padding: 0;
+    gap: initial;
+    justify-content: space-around;
+  }
+
   #contact {
+    visibility: hidden;
+  }
+
+  #contact header {
+    display: none;
+  }
+
+  #contacts-info {
     display: none;
   }
 
@@ -207,9 +246,15 @@ main {
     width: 100%;
     left: 0;
     right: 0;
+    bottom: 0;
+
+    background: var(--paper);
+    padding: 0.5rem 0;
+    margin: 0;
 
     flex-direction: row;
     gap: var(--gap);
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;
   }
 }
