--- a/style.css
+++ b/style.css
@@ -10,9 +10,22 @@
 /* General Styles */
 html,
 body {
-  background-image: url("https://wallpapercave.com/wp/wp7453795.jpg");
+  background-color: rgb(63, 49, 49);
   color: rgb(240, 234, 234);
   font-family: var(--font);
+  background-repeat: no-repeat;
+  object-fit: contain;
+}
+body {
+  width: 100%;
+  border: 15px solid coral;
+  animation: mymove 5s infinite;
+}
+
+@keyframes mymove {
+  50% {
+    border-color: lightblue;
+  }
 }
 
 body {
@@ -21,6 +34,7 @@ body {
   min-height: 100vh;
   gap: var(--gap);
   max-width: var(--container);
+  font-size: 1.2rem;
 }
 a,
 a:any-link {
@@ -39,7 +53,6 @@ body > header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   top: 0;
   gap: 60px;
   z-index: 1;
@@ -61,9 +74,11 @@ nav ul {
 }
 
 /*img*/
-img {
+.my-img {
   width: 90%;
   height: 13rem;
+  object-fit: contain;
+  margin-left: 2em;
 }
 
 .figure {
@@ -79,12 +94,13 @@ section p {
 
 /*Modules*/
 .modules {
-  padding-bottom: 0.1rem;
   display: flex;
-  flex-direction: row;
-  gap: 3em;
-  flex-wrap: wrap;
+  flex-direction: column;
+  padding-left: 70%;
+  padding-top: 10%;
+  position: absolute;
 }
+
 .module__head {
   padding-left: 2rem;
 }
@@ -92,4 +108,40 @@ section p {
 .main {
   background-color: var(--orange-light);
   border-left: 4px solid var(--orange-dark);
+}
+
+/*Footer*/
+
+.footer {
+  margin-top: 1rem;
+}
+
+.footer__content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.for-you {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.img__footer {
+  text-align: center;
+  width: 3%;
+  border: 1px solid gray;
+  border-radius: 80%;
+  padding: 12px;
+  overflow: hidden;
+}
+@media screen and (max-width: 768px) {
+  .modules {
+    display: flex;
+    flex-direction: column;
+    padding-left: 70%;
+    padding-top: 10%;
+    position: relative;
+  }
 }
