--- a/style.css
+++ b/style.css
@@ -1,57 +1,482 @@
-/* Design tokens */
 :root {
-  --paper: hsla(251, 28%, 88%, 0.99);
-  --ink: hsla(244, 16%, 17%, 0.95);
-  --brand: hsla(0, 79%, 63%, 0.9);
-  --font: "Raleway", system-ui, sans-serif;
-  --gap: 20px;
-  --container: clamp(280px, calc(100vw - calc(var(--gap) * 2)), 1180px);
-}
-/* General Styles */
-html,
-body {
-  scroll-behavior: smooth;
-  background: var(--paper);
-  color: var(--ink);
-  font-family: var(--font);
+  --bar-width: 80px;
+  --bar-width-before: 40px;
+  --bar-height: 10px;
+  --hamburger-gap: 5px;
+  --foreground: #3427eb;
+  --background: white;
+  --backgroundaa: #f4ece6;
+  --animation-timing: 0.33s ease-in;
+  --transform-origin: left center;
+  --hamburger-height: 36px;
 }
 body {
-  display: grid;
-  margin: auto;
-  min-height: 100vh;
-  gap: var(--gap);
-  max-width: var(--container);
+  margin: 0;
+  padding: 0;
 }
-a,
-a:any-link {
-  color: currentColor;
-  text-decoration: none;
-  border-bottom: 2px solid transparent;
-  transition: border-color ease-in-out 0.3s;
-}
-a:hover,
-a:focus {
-  color: var(--brand);
-  border-color: currentColor;
-}
-/* Site header and navigation */
-body > header {
-  background: var(--paper);
+header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 1;
+  position: relative;
 }
-nav ul {
-  display: flex;
-  list-style: none;
-  gap: var(--gap);
+.hamburger-menu::before {
+  content: "";
+  width: var(--bar-width-before);
+  height: var(--bar-height);
+  background-color: var(--foreground);
+  transition: all var(--animation-timing);
+}
+.hamburger-menu::after {
+  content: "";
+  width: var(--bar-width-before);
+  height: var(--bar-height);
+  background-color: var(--foreground);
+  transition: all var(--animation-timing);
+  margin-left: 40px;
+}
+.hamburger-menu input {
+  content: "";
+  width: var(--bar-width);
+  height: var(--bar-height);
+  background-color: var(--foreground);
+  transition: all var(--animation-timing);
+}
+h1 {
+  margin: 3% 5% 5% 5%;
+  padding: 10px;
+  font-size: 60px;
+  font-weight: bold;
 }
 
-/* Text readability */
-section p {
-  line-height: 1.5;
-  max-width: 55ch;
+.headspan {
+  margin-top: 3px;
+  font-size: 40px;
+  font-weight: lighter;
+  margin-left: 6%;
+}
+.blu {
+  font-size: 1.2%;
+  height: 5px;
+  padding: 15px 20px;
+  background-color: blue;
+  margin-right: 40px;
+}
+.hone{
+  font-size: 55%;
+}
+.hflex {
+  display: flex;
+  padding: 20px;
+}
+.hamburger-menu {
+  position: absolute;
+  top: 50px;
+  right: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--hamburger-gap);
+  z-index: 13;
+  cursor: pointer;
+  transition: all var(--animation-timing);
+  font-weight: lighter;
+}
+.hamburger-menu input {
+  appearance: none;
+  padding-left: 0;
+  margin-left: 0;
+  outline: none;
+  transition: all var(--animation-timing);
+}
+.hamburger-menu:has(input:checked)::before {
+  rotate: 32deg;
+  background-color: black;
+  transition: all var(--animation-timing);
+}
+.hamburger-menu:has(input:checked) {
+  gap: 0;
+}
+
+.hamburger-menu:has(input:checked)::after {
+  rotate: -148deg;
+  background-color: black;
+
+  gap: 0;
+  transition: all var(--animation-timing);
+}
+
+.hamburger-menu input:checked {
+  rotate: -45deg;
+  background-color: black;
+  transition: all var(--animation-timing);
+}
+
+.sidebar {
+  transition: all var(--animation-timing);
+  translate: 0 -800%;
+  width: 20%;
+  height:auto;
+  z-index: 11;
+position: absolute;
+left: 400px;
+
+  /* background: var(--backgroundaa);
+  background-size: contain;
+  text-align: center; */
+}
+
+.head {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all var(--animation-timing);
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+}
+.sidebar a {
+  text-decoration: none;
+  color: black;
+}
+.sidebar a:hover{
+  background-color: aqua;
+}
+.sidebar li {
+  list-style-type: none;
+  font-size: 20px;
+  padding: 10px;
+  font-weight: bold;
+  margin-top: 60px;
+}
+ul {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: start;
+  padding-top: 40%;
+}
+
+.hamburger-menu:has(input:checked) + .sidebar {
+  translate: 0;
+  transition: all var(--animation-timing);
+}
+/* .hamburger-menu:has(input:checked) + .head {
+  translate: 0;
+} */
+
+.secondpart {
+  background-color: var(--backgroundaa);
+  position: absolute;
+  top: 300px;
+  width: 80%;
+  margin-left: 100px;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  padding-bottom: 50px;
+}
+.secondpart-img {
+  border-radius: 50%;
+  width: 30%;
+
+  margin-top: 30px;
+}
+.repr{
+  border: 2px solid black;
+  border-radius: 20px;
+  padding: 15px 25px;
+  margin:15px;
+  color:white;
+  background-color: #5b51f0;
+  font-size: 30px;
+  text-decoration: none;
+}
+.repr:hover{
+  color:black;
+  background-color: aqua;
+}
+.social{
+  margin-top: 80px;
+  padding: 10px;
+  border: 2px solid white;
+  background-color: white;
+  width:100%;
+  text-align: center;
+}
+.social img{
+  width:80px;
+  padding: 20px;
+}
+.fixed{
+
+  position:absolute;
+  background: #E6DACD ;
+  color: black;
+  top: 500px;
+  padding-bottom: 300px;
+  padding-bottom: 30px;
+}
+.fixed h1{
+  font-size: 80px;
+}
+.fixed h2{
+  font-size: 50px;
+  padding: 30px;
+}
+.fixed p{
+  font-size: 30px;
+   padding: 30px;
+}
+footer{
+  position: absolute;
+  top:2200px;
+  font-size: 50px;
+padding-bottom: 30px;
+margin-bottom: 50px;
+}
+.calwr{
+    display: grid;
+  grid-template-columns: 50% 50%;
+ padding-right:70px ;
+ margin-left: 40px;
+
+}
+.calwr p{ font-size: 20px;}
+.calwr a{ font-size: 20px;}
+footer li{
+  list-style-type: none;
+}
+footer a{
+  text-decoration: none;
+  color: black;
+  font-size: 40%;
+}
+footer p{
+  font-weight: bold;
+    font-size: 55%;
+}
+.footernav{
+  display: flex;
+  width:20px;
+  padding: 20px;
+}
+footer .social{
+  margin-left: 20px;
+  text-align: left;
+}
+@media screen and (min-width: 900px) {
+  .left, .main, .right {
+    width: 100%; The width is 100%, when the viewport is 800px or smaller
+  }
+
+.hamburger-menu, .checkbox{
+  display: none;
+}
+.sidebar{
+          translate: 0 0;
+          display: flex;
+         background-color: white;
+           justify-content: end;
+           width:min-content;
+           height: fit-content;
+           align-items: end;
+          position: absolute;
+          top:-230px;
+          left:800px;
+}
+.sidebarul{
+   flex-direction: row;
+ 
+   align-items: end;
+}
+.sidebarul a{
+font-size: 13px;
+
+}
+.sidebarul a:hover{
+  background-color: bisque;
+ 
+}
+.sidebar li{
+  font-size: 70px;
+  padding: 30px;
+}
+.head{
+  z-index: 3;
+  display: flex;
+  
+ 
+}
+footer a, p{
+  font-size: 70%;
+}
+/* .head h1{
+   font-size: 10px;
+   font-weight: lighter;
+} */
+.headspan{
+  display: none;
+}
+.blu{
+  font-size: 10px;
+  height: 5px;
+  padding: 5px 15px;
+  background-color: blue;
+  margin-right: 40px;
+}
+.fixed{
+  width:45%;
+  top:200px;
+  padding-bottom: 200px;
+}
+.par{
+  position: absolute;
+  width:110%;
+  left:600px;
+  top:10px;
+  
+}
+
+.par h1{
+  font-size: 50px;
+}
+.par h2{
+  font-size: 30px;
+  padding: 10px;
+  margin: 10px;
+}
+.par p{
+  margin-top: 70px;
+  font-size: 18px;
+}
+.secondpart{
+  width:30%;
+  left:90px ;
+}
+.clicks{
+  display: flex;
+  position: absolute;
+  left:400px;
+  margin: 50px;
+  top:70px;
+  text-align: center;
+  justify-content: center;
+  
+}
+
+ .repr{
+  padding: 5px 35px;
+  font-size: 15px;
+  cursor:pointer;
+
+}
+.repr:hover{
+  color: black;
+  background-color: aqua;
+}
+.social{
+  margin-top: 50px;
+  padding: 3px;
+position: absolute;
+top:300px
+}
+footer{
+  display: grid;
+  top:1000px;
+  font-size: 15px;
+  padding: 15px;
+  margin: 15px;
+}
+footer .social{
+  position: absolute;
+  top: -30px;
+  width: 30px;
+  display: flex;
+  left: 700px; 
+}
+footer .social p{
+  font-size: 20px;
+}
+.follow{
+  position: absolute;
+  top: -13px;
+  left:30px;
+  margin-bottom: 20px;
+}
+
+}
+.project-maindiv{
+  background-color: bisque;
+  font-size: 20px;
+ position: absolute;
+   top:50%;
+   width: 100%;
+}
+.project-maindiv p{
+   margin: 20px;
+   
+}
+
+main section img{
+  width:70%;
+  text-align: center;
+}
+.project-maindiv section{
+  display: flex;
+  border: 2px solid white;
+  width: 70%;
+  background-color: white;
+  margin: 30px;
+  margin-left: 50px;
+padding: 20px;
+ align-items: center;
+ 
+}
+.project-maindiv section img{transition: 1.1s;}
+.project-maindiv section img:hover{
+  transform: scale(1.1);
+}
+.profoot{
+  position: absolute;
+   top:430%;
+}
+.nu, .em{
+  font-size: 1.2rem;
+}
+@media screen and (min-width: 900px) {
+  .left, .main, .right {
+    width: 100%; The width is 100%, when the viewport is 800px or smaller
+  }
+.profoot{
+  position: absolute;
+   top:660%;
+}
+}
+.resh{
+  text-align: center;
+  padding-top: 30px;
+  font-size: 2rem;
+}
+.resume-maindiv{
+    background-color: bisque;
+  font-size: 20px;
+ position: absolute;
+   top:50%;
+   width: 100%;
+}
+.resume-maindiv section{
+  border: 2px solid white;
+  width: 70%;
+  background-color: white;
+  margin: 30px;
+  margin-left: 50px;
+padding: 20px;
+ align-items: center;
+}
+.number{
+  color: blue;
+  text-align: center;
+}
+.resume-maindiv section h3{
+  margin: 10px;
 }
