--- a/Aisha-Athman-Lali-Portfolio/style.css
+++ b/Aisha-Athman-Lali-Portfolio/style.css
@@ -138,6 +138,75 @@ img {
   display: flex;
   justify-content: space-evenly;
 }
+/* .card-aboutme {
+  box-shadow: 0px 4 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  text-align: center;
+  padding: 5px 8px;
+  /* background-color: #F4ECE6; */
+  margin-top: 2rem;
+/* } */ 
+.wireframe-card {
+  box-shadow: 0px 4 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  text-align: center;
+  padding: 5px 8px;
+}
+.cakes-card {
+  box-shadow: 0px 4 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  text-align: center;
+  padding: 5px 8px;
+}
+.forms-card {
+  box-shadow: 0px 4 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  text-align: center;
+  padding: 5px 8px;
+}
+.bicycle-card {
+  box-shadow: 0px 4 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  text-align: center;
+  padding: 5px 8px;
+}
+.karma-card {
+  box-shadow: 0px 4 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  text-align: center;
+  padding: 5px 8px;
+}
+.shopping-card {
+  box-shadow: 0px 4 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  text-align: center;
+  padding: 5px 8px;
+}
+.space-card {
+  box-shadow: 0px 4 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  text-align: center;
+  padding: 5px 8px;
+}
+.birthday-card {
+  box-shadow: 0px 4 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  text-align: center;
+  padding: 5px 8px;
+}
+
+.card:hover {
+  box-shadow: 0px 8px 16px 0 rgba(0,0,0,0.2);
+}
 
 picture {
   height: auto;
