--- a/Aisha-Athman-Lali-Portfolio/style.css
+++ b/Aisha-Athman-Lali-Portfolio/style.css
@@ -141,7 +141,7 @@ img {
 .project-card {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-bottom: 5rem;
   gap: 0.5rem;
 }
@@ -154,7 +154,7 @@ img {
 }
 
 .card {
-  box-shadow: 0px 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0 rgba(9, 9, 9, 0.2);
   transition: 0.3s;
   width: 100%;
   text-align: center;
@@ -163,11 +163,16 @@ img {
 }
 
 .card:hover {
-  box-shadow: 0px 16px 32px 0 rgba(237, 241, 15, 0.2);
+  box-shadow: 0px 16px 32px 0 blueviolet;
 }
 
 #contact {
   margin-top: 5rem;
+}
+
+.contact-text {
+  font-size: larger;
+  
 }
 
 picture {
@@ -177,11 +182,11 @@ picture {
 /* 
 I would start breaking this up into component files now btw! 
 */
-.showcase {
+/* .showcase {
   display: flex;
   flex-flow: row wrap;
   gap: var(--gap);
-}
+} */
 /*
 Here's an example of a grid layout. Notice there's no margin, padding, or sizes given on elements
 All the spacing and sizing is set on the template, and the elements
@@ -190,7 +195,7 @@ The little dots are how we precisely place and size white-space
 https://www.interaction-design.org/literature/article/the-power-of-white-space
 */
 
-.project {
+/* .project {
   display: grid;
   grid-template:
     "picture picture picture" var(--box)
@@ -207,4 +212,4 @@ https://www.interaction-design.org/literature/article/the-power-of-white-space
 }
 .project__blurb {
   grid-area: blurb;
-}
+} */
